baml_language/crates/baml_tests/snapshots/compiles/catch_all_panics/baml_tests__compiles__catch_all_panics__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.CatchAllPanicsTyped(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch_all_panics (e) { string => "caught string", int => "caught int" }
}
function user.CatchAllPanicsWildcard(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch_all_panics (e) { _ => "caught all" }
}
function user.CatchThenCatchAllPanics(x: int) -> string  [expr] {
  {  } MayFailIntOrString(x) catch (e) { string => "caught string" } catch_all_panics (e2) { _ => "caught rest" }
}
function user.MayFailIntOrString(x: int) -> string  [expr] {
  {  } match (x) { 0 => throw "string error", 1 => throw 42, _ => "ok" }
}
