baml_language/crates/baml_tests/snapshots/compiles/catch_all_panics/baml_tests__compiles__catch_all_panics__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.CatchAllPanicsTyped(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown // e
    let _3: bool
    let _4: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb6, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, string);
        branch copy _3 -> [bb5, bb2];
    }

    bb2: {
        _4 = is_type(copy _2, int);
        branch copy _4 -> [bb4, bb3];
    }

    bb3: {
        rethrow copy _2;
    }

    bb4: {
        _0 = const "caught int";
        goto -> bb6;
    }

    bb5: {
        _0 = const "caught string";
        goto -> bb6;
    }

    bb6: {
        return;
    }
}

fn user.CatchAllPanicsWildcard(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown // e

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb2, unwind: bb1];
    }

    bb1: {
        _0 = const "caught all";
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.CatchThenCatchAllPanics(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: unknown
    let _3: bool

    bb0: {
        _0 = call const fn user.MayFailIntOrString(copy _1) -> [bb4, unwind: bb1];
    }

    bb1: {
        _3 = is_type(copy _2, string);
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        _0 = const "caught rest";
        goto -> bb4;
    }

    bb3: {
        _0 = const "caught string";
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.MayFailIntOrString(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param

    bb0: {
        switch copy _1 [0: bb4, 1: bb3, otherwise: bb1];
    }

    bb1: {
        _0 = const "ok";
        goto -> bb2;
    }

    bb2: {
        return;
    }

    bb3: {
        throw const 42_i64;
    }

    bb4: {
        throw const "string error";
    }
}
