baml_language/crates/baml_tests/snapshots/compiles/catch_all_panics/baml_tests__compiles__catch_all_panics__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.MayFailIntOrString(x: int) -> string throws never {
  { : "ok"
    match (x : int) : "ok"
      0 =>
        throw "string error" : never
      1 =>
        throw 42 : never
      _ =>
        "ok" : "ok"
  }
}
function user.CatchAllPanicsWildcard(x: int) -> string throws never {
  { : string
    catch (MayFailIntOrString(x) : string) : string
      catch_all_panics (e)
        _ =>
          "caught all" : "caught all"
  }
}
function user.CatchAllPanicsTyped(x: int) -> string throws never {
  { : string
    catch (MayFailIntOrString(x) : string) : string
      catch_all_panics (e)
        string =>
          "caught string" : "caught string"
        int =>
          "caught int" : "caught int"
  }
}
function user.CatchThenCatchAllPanics(x: int) -> string throws never {
  { : string
    catch (MayFailIntOrString(x) : string) : string
      catch (e)
        string =>
          "caught string" : "caught string"
      catch_all_panics (e2)
        _ =>
          "caught rest" : "caught rest"
  }
}
